--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 		ddfdfsfsf
 		<p>焦韵涵真美</p>
 		<p>像一朵花，芬芳了工作室</p>
-		<a href="jiao.html">rdfdfdfd</a>
+		<a href="C:\Users\wangxin\Desktop\summer\omdaylife.github.io\jiao.html">rdfdfdfd</a>
 </body>
 </html>
